# PP-DTCW

./: README.md  pyproject.toml
src/pp_dtcw/: dataclass_test_case_wrapper.py
tests/: test_dataclass_test_case_wrapper.py
