[tool.poetry]
name = "pp-dtcw"
version = "0.1.0"
description = ""
authors = ["Rose Veebee <veebeerose@gmail.com>"]
readme = "README.md"
packages = [{include = "pp_dtcw", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

log_cli = 1
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "./logs/pytest.log"
log_file_mode = "a"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
